Fix HTML formatting and structure

--- a/ctf/index.html
+++ b/ctf/index.html
@@ -48,9 +48,7 @@
 </section>
 
 <section id="web">
-    <h1>Web</h1>
-
-    <h3>Connection 1</h3>
+       <h3>Connection 1</h3>
     <p>Réussirez-vous à trouver le flag ?</p>
     <a href="ne pas toucher/web/defi1.html" target="_blank">défi1.html</a><br>
     <input type="text" id="flag-web1" class="flag-input" placeholder="flag{...}">
@@ -77,6 +75,20 @@
     <input type="text" id="flag-web4" class="flag-input" placeholder="flag{...}">
     <button class="flag-button" onclick="checkFlag('web4')">Vérifier</button>
     <p id="result-web4" class="flag-result"></p>
+
+    <h3>Contournement avec style</h3>
+    <p>trouvez vous le mot de passe</p>
+    <a href="ne pas toucher/web/defi5.html" target="_blank">défi5.html</a><br>
+    <input type="text" id="flag-web5" class="flag-input" placeholder="flag{...}">
+    <button class="flag-button" onclick="checkFlag('web5')">Vérifier</button>
+    <p id="result-web5" class="flag-result"></p>
+
+    <h3>Login coté client</h3>
+    <p>Une vérification côté client... Ça vaut ce que ça vaut.</p>
+    <a href="ne pas toucher/web/defi6.html" target="_blank">défi6.html</a><br>
+    <input type="text" id="flag-web6" class="flag-input" placeholder="flag{...}">
+    <button class="flag-button" onclick="checkFlag('web6')">Vérifier</button>
+    <p id="result-web6" class="flag-result"></p>
 </section>
 
 <section id="steganographie">
@@ -135,3 +147,4 @@
 </body>
 
 </html>
+
