Fix HTML encoding issues in index.html

--- a/ctf/index.html
+++ b/ctf/index.html
@@ -48,7 +48,9 @@
 </section>
 
 <section id="web">
-       <h3>Connection 1</h3>
+    <h1>Web</h1>
+    
+    <h3>Connection 1</h3>
     <p>Réussirez-vous à trouver le flag ?</p>
     <a href="ne pas toucher/web/defi1.html" target="_blank">défi1.html</a><br>
     <input type="text" id="flag-web1" class="flag-input" placeholder="flag{...}">
@@ -147,4 +149,5 @@
 </body>
 
 </html>
+
 
