--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=CTF/">
+    <meta http-equiv="refresh" content="0; url=ctf/">
     <title>Redirection…</title>
 </head>
 <body>
